final modify